objects/SIP_Mapping__c.object
<CustomObject>
    <description>SIP mapping is used to store all related data to support report API for SIP records</description>
    <fields>
        <fullName>Group__c</fullName>
        <description>Values to match group field on SIP record. Required for record type Group</description>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>GAM</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Field_10__c</fullName>
        <description>Contains the Analytics API report field name in the related report</description>
        <label>Report Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Field_11__c</fullName>
        <description>Contains the Analytics API report field name in the related report</description>
        <label>Report Field 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Field_12__c</fullName>
        <description>Contains the Analytics API report field name in the related report</description>
        <label>Report Field 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID_10__c</fullName>
        <description>Contains the report ID for each mapping</description>
        <label>Report ID 10</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID_11__c</fullName>
        <description>Contains the report ID for each mapping</description>
        <label>Report ID 11</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID_12__c</fullName>
        <description>Contains the report ID for each mapping</description>
        <label>Report ID 12</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Parameters_10__c</fullName>
        <description>Contains the parameters which have to be passed to the associated report</description>
        <label>Report Parameters 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Parameters_11__c</fullName>
        <description>Contains the parameters which have to be passed to the associated report</description>
        <label>Report Parameters 11</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Parameters_12__c</fullName>
        <description>Contains the parameters which have to be passed to the associated report</description>
        <label>Report Parameters 12</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Field_10__c</fullName>
        <description>Contains the API name of the tar-get field on the SIP record</description>
        <label>Target Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_11__c</fullName>
        <description>Contains the API name of the tar-get field on the SIP record</description>
        <label>Target Field 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_12__c</fullName>
        <description>Contains the API name of the tar-get field on the SIP record</description>
        <label>Target Field 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Name_10__c</fullName>
        <label>Target Field Name 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Name_11__c</fullName>
        <label>Target Field Name 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Name_12__c</fullName>
        <label>Target Field Name 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SIP Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY_15_Mappings</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>15</value>
        </filters>
        <label>All FY 15 Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY_16_Mappings</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>16</value>
        </filters>
        <label>All FY 16 Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY_17_Mappings</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>17</value>
        </filters>
        <label>All FY 17 Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_FY_18_Mappings</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>18</value>
        </filters>
        <label>All FY 18 Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Standard_Mappings</fullName>
        <columns>NAME</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>standard</value>
        </filters>
        <label>All Standard Mappings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SIP Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIP Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>